// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t0] route is initialized then: stdout has good vibes 1`] = `
"🦉 and then?

🗿 route.stone.get
   ├─ query = @next-one
   └─ stone = 1.vision (1.vision.stone)
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t1] 1.vision artifact is created and pass attempted then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = wait for human approval
   └─ guard
      ├─ artifacts
      │   └─ 1.vision.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished [TIME] ✗
              └─ reason: wait for human approval
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t2] 1.vision is approved by human then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   └─ ✓ approved
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t3] 1.vision pass is reattempted after approval then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ 1.vision.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism approved? --stone $stone --route $route
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t4] next stone is requested after 1.vision then: stdout has good vibes 1`] = `
"🦉 and then?

🗿 route.stone.get
   ├─ query = @next-one
   └─ stone = 2.research (2.research.stone)
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t5] 2.research pass attempted without artifact then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t6] 2.research artifact created and pass attempted then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 2.research
   ├─ passage = allowed (unguarded)
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t7.6] bouncer blocks write to protected artifact then: stdout has good vibes 1`] = `
"🦉 patience, friend

🗿 route.bounce
   ├─ blocked
   │  ├─ artifact = src/weather.ts
   │  └─ guard = 3.blueprint.guard
   │
   ├─ a journey of a thousand miles begins with a single step 🪷
   │  ├─
   │  │
   │  │  this artifact is locked until stone 3.blueprint is passed.
   │  │
   │  │  the way cannot be rushed. each stone builds on the last.
   │  │
   │  └─
   │
   └─ to pass this stone and unlock this gate, run
      └─ rhx route.drive
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t7] next stone is requested after 2.research then: stdout has good vibes 1`] = `
"🦉 and then?

🗿 route.stone.get
   ├─ query = @next-one
   └─ stone = 3.blueprint (3.blueprint.stone)
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t8.5] 3.blueprint review.self is promised then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 3.blueprint
   └─ passage = progressed (review.self 1/1 promised)
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t8] 3.blueprint artifact created and pass attempted then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 3.blueprint
   └─ passage = blocked (review.self required)

🌕 lets reflect
   │
   ├─ review.self 1/1
   │  ├─ slug = design-complete
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  have you completed the full api design?
   │  │    are all endpoints, request/response shapes, and error cases documented?
   │  │
   │  └─
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  refocus.
   │  │
   │  │  the review is the work.
   │  │  not a step to complete.
   │  │  not a gate to pass.
   │  │  not a checkbox to check.
   │  │
   │  │  it is the work itself.
   │  │
   │  │  you do not care about the stone.
   │  │  you only care about the review.
   │  │
   │  └─
   │
   ├─ walk the way 🪷
   │  │
   │  ├─ articulate into
   │  │  └─ /review/self/for.3.blueprint._.r1.design-complete.md
   │  │
   │  ├─ for each found issue 🪘
   │  │  ├─
   │  │  │
   │  │  │  articulate how it was fixed
   │  │  │  so you remember for next time
   │  │  │
   │  │  └─
   │  │
   │  └─ for each non issue 🪘
   │     ├─
   │     │
   │     │  articulate why it holds
   │     │  so others can learn from it
   │     │
   │     └─
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 3.blueprint --as promised --that design-complete
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t9.5] 3.blueprint review set to pass and pass reattempted then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - completed (cached)
   ├─ ✓ judge.1 - allowed (cached)
   └─ ✗ judge.2 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 3.blueprint
   ├─ passage = blocked
   ├─ reason = wait for human approval
   └─ guard
      ├─ artifacts
      │   └─ 3.blueprint.md
      ├─ reviews
      │   └─ r1: bash $route/.test/mock-review.sh
      │       └─ · cached
      └─ judges
          ├─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 2
          │   └─ · cached
          └─ j2: rhx route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished [TIME] ✗
              └─ reason: wait for human approval
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t9] 3.blueprint pass reattempted after promise then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - completed [TIME]
   ├─ ✗ judge.1 - blocked [TIME]
   └─ ✗ judge.2 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 3.blueprint
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0); wait for human approval
   └─ guard
      ├─ artifacts
      │   └─ 3.blueprint.md
      ├─ reviews
      │   └─ r1: bash $route/.test/mock-review.sh
      │       ├─ finished [TIME] ✓
      │       ├─ review: .route/3.blueprint.guard.review.i1.fd29f621e589e44175adf2201fa80bf72797235b994355101b4f50e08e4ebe44.r1.md
      │       └─ 1 blocker 🔴
      └─ judges
          ├─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 2
          │   ├─ finished [TIME] ✗
          │   └─ reason: blockers exceed threshold (1 > 0)
          └─ j2: rhx route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished [TIME] ✗
              └─ reason: wait for human approval
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t10] 3.blueprint approved and self-review completed then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - completed (cached)
   ├─ ✓ judge.1 - allowed [TIME]
   └─ ✓ judge.2 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 3.blueprint
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ 3.blueprint.md
   │  ├─ reviews
   │  │   └─ r1: bash $route/.test/mock-review.sh
   │  │       └─ · cached
   │  └─ judges
   │      ├─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 2
   │      │   └─ finished [TIME] ✓
   │      └─ j2: rhx route.stone.judge --mechanism approved? --stone $stone --route $route
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t11] next stone is requested after 3.blueprint then: stdout has good vibes 1`] = `
"🦉 and then?

🗿 route.stone.get
   ├─ query = @next-one
   └─ stone = 5.execute (5.execute.stone)
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t12] 5.execute artifact created and pass attempted then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - completed [TIME]
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 5.execute
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ weather.ts
   │  ├─ reviews
   │  │   └─ r1: bash $route/.test/mock-review.sh
   │  │       ├─ finished [TIME] ✓
   │  │       └─ review: .route/5.execute.guard.review.i1.e5c031c5923de2dd7ebc77d84ac1c222cfdb9d3143fa8c0bc27ed9d821ce74e3.r1.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t13] next stone is requested after all stones passed then: stdout has good vibes 1`] = `
"🦉 and then?

🗿 route.stone.get
   ├─ query = @next-one
   └─ status = all stones passed
"
`;
